--- a/liteapi-map-sdk/demo/index.html
+++ b/liteapi-map-sdk/demo/index.html
@@ -1,28 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LiteAPI Map SDK Demo</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      font-family: system-ui;
-    }
-    
-    #map {
-      width: 85%;
-      height: 600px;
-      background: #f0f0f0;
-      border: 2px solid #ccc;
-    }
-  </style>
-</head>
-<body>
-  <h1>Map SDK Demo</h1>
-  <div id="map"></div>
-  
-  <script type="module" src="./main.ts"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LiteAPI Map SDK Demo</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 20px;
+        font-family: system-ui;
+      }
+
+      #map {
+        width: 85%;
+        height: 600px;
+        background: #f0f0f0;
+        border: 2px solid #ccc;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Map SDK Demo</h1>
+    <div id="map"></div>
+
+    <script type="module" src="./main.ts"></script>
+  </body>
 </html>
