--- a/liteapi-map-sdk/demo/index.html
+++ b/liteapi-map-sdk/demo/index.html
@@ -5,24 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiteAPI Map SDK Demo</title>
     <style>
-      body {
+      * {
         margin: 0;
-        padding: 20px;
-        font-family: system-ui;
+        padding: 0;
+        box-sizing: border-box;
       }
 
-      #map {
-        width: 85%;
-        height: 600px;
-        background: #f0f0f0;
-        border: 2px solid #ccc;
+      body {
+        padding: 20px;
+        background: #f5f5f5;
+      }
+
+      .maps-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+      }
+
+      .map-section {
+        flex: 1;
+      }
+
+      .map-container {
+        width: 100%;
+        height: 400px;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+      }
+
+      /* Desktop: side by side */
+      @media (min-width: 768px) {
+        .maps-wrapper {
+          flex-direction: row;
+        }
+
+        .map-container {
+          height: 500px;
+        }
       }
     </style>
   </head>
   <body>
     <h1>Map SDK Demo</h1>
-    <div id="map"></div>
-
+    <div class="maps-wrapper">
+      <div class="map-section">
+        <h2>Map 1: Paris</h2>
+        <div id="map-paris" class="map-container"></div>
+      </div>
+      <div class="map-section">
+        <h2>Map 2: Amsterdam</h2>
+        <div id="map-ams" class="map-container"></div>
+      </div>
+    </div>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
