Display check-in & -out dates and loading state info, Make CSS more consistent

--- a/liteapi-map-sdk/demo/runtime-customization.html
+++ b/liteapi-map-sdk/demo/runtime-customization.html
@@ -31,12 +31,13 @@
 
       .subtitle {
         color: #666;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        font-size: 14px;
       }
 
       .controls {
         background: white;
-        padding: 20px;
+        padding: 16px 20px;
         border-radius: 8px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         margin-bottom: 20px;
@@ -70,6 +71,7 @@
         background: #e0e0e0;
         outline: none;
         -webkit-appearance: none;
+        appearance: none;
       }
 
       input[type='range']::-webkit-slider-thumb {
