--- a/liteapi-map-sdk/demo/index.html
+++ b/liteapi-map-sdk/demo/index.html
@@ -14,12 +14,62 @@
       body {
         padding: 20px;
         background: #f5f5f5;
+        font-family:
+          -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+          sans-serif;
+      }
+
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+
+      h1 {
+        margin-bottom: 10px;
+        color: #333;
+      }
+
+      h2 {
+        margin-bottom: 10px;
+        color: #333;
+        font-size: 18px;
+      }
+
+      .date-info {
+        background: white;
+        padding: 16px 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+        display: flex;
+        gap: 24px;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+
+      .date-info-item {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+
+      .date-info-label {
+        font-size: 12px;
+        color: #666;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+      }
+
+      .date-info-value {
+        font-size: 16px;
+        font-weight: 600;
+        color: #333;
       }
 
       .maps-wrapper {
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 20px;
       }
 
       .map-section {
@@ -31,10 +81,9 @@
         height: 400px;
         border-radius: 8px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-        margin-bottom: 20px;
+        background: white;
       }
 
-      /* Desktop: side by side */
       @media (min-width: 768px) {
         .maps-wrapper {
           flex-direction: row;
@@ -47,7 +96,18 @@
     </style>
   </head>
   <body>
-    <h1>Map SDK Demo</h1>
+    <div class="container">
+      <h1>Map SDK Demo</h1>
+      <div class="date-info">
+      <div class="date-info-item">
+        <span class="date-info-label">Check-in</span>
+        <span class="date-info-value" id="checkin-date">Loading...</span>
+      </div>
+      <div class="date-info-item">
+        <span class="date-info-label">Check-out</span>
+        <span class="date-info-value" id="checkout-date">Loading...</span>
+      </div>
+    </div>
     <div class="maps-wrapper">
       <div class="map-section">
         <h2>Map 1: Paris</h2>
@@ -57,6 +117,7 @@
         <h2>Map 2: Amsterdam</h2>
         <div id="map-ams" class="map-container"></div>
       </div>
+    </div>
     </div>
     <script type="module" src="./main.ts"></script>
   </body>
