Update README + Display search info in demo

--- a/liteapi-map-sdk/demo/index.html
+++ b/liteapi-map-sdk/demo/index.html
@@ -107,6 +107,14 @@
           <span class="date-info-label">Check-out</span>
           <span class="date-info-value" id="checkout-date">Loading...</span>
         </div>
+        <div class="date-info-item">
+          <span class="date-info-label">Currency</span>
+          <span class="date-info-value">USD (default)</span>
+        </div>
+        <div class="date-info-item">
+          <span class="date-info-label">Occupancy</span>
+          <span class="date-info-value">1 room · 2 adults · 0 children</span>
+        </div>
       </div>
       <div class="maps-wrapper">
         <div class="map-section">
