--- a/liteapi-map-sdk/demo/runtime-customization.html
+++ b/liteapi-map-sdk/demo/runtime-customization.html
@@ -163,7 +163,10 @@
   <body>
     <div class="container">
       <h1>Runtime Customization Demo</h1>
-      <p class="subtitle">Adjust the minimum rating and dates to filter hotels dynamically</p>
+      <p class="subtitle">
+        Adjust the minimum rating and dates to filter hotels dynamically. Defaults: USD currency, 1
+        room, 2 adults, 0 children.
+      </p>
 
       <div class="controls">
         <div class="control-group">
@@ -221,7 +224,8 @@
         </div>
 
         <div class="search-info">
-          Searching for: <strong>1 room</strong> for <strong>2 adults</strong>
+          Searching for: <strong>1 room</strong> · <strong>2 adults</strong> ·
+          <strong>0 children</strong> (currency <strong>USD</strong>)
         </div>
 
         <div class="loading" id="loading">Updating hotels...</div>
